# ai-report-agent

./: .gitignore  README.md  ai_agent.py  config.py  main.py  pyproject.toml  requirements.txt
ai_agent/: ai_agent.py  base_llm_backend.py  cerebras_backend.py  openai_backend.py
exceptions/: backend_exceptions.py  rate_limit_exceptions.py  summarization_exceptions.py
middleware/: rate_limiter.py
models/: summarization_request.py
prompts/: document_summarizer_prompt.py  prompt_builder.py
routers/: summarize_router.py
services/: summarize_service.py
services/word_limit/: free_user_word_limit_checker.py  pro_user_word_limit_checker.py  word_limit_checker.py  word_limit_checker_factory.py
tests/prompts/: prompt_builder.test.py
utils/: __init__.py  docx_utils.py  file_extraction.py  ip_validation.py  localization.py  pdf_utils.py  response_helpers.py  translations.py  txt_utils.py
